Added spiffs partition for serving static html

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,2 +1,4 @@
-idf_component_register(SRCS "main.c"
+idf_component_register(SRCS "main.c" "http_server.c" "spiffs.c"
                     INCLUDE_DIRS ".")
+
+spiffs_create_partition_image(spiffs "./html" FLASH_IN_PROJECT)
